6996291: command line selection of MToolkit by -Dawt.toolkit=sun.awt.motif.MToolkit fails from jdk7 b21 on

Reviewed-by: art, dcherepanov, bae, prr